--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>React First from Hien Vuong</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="app/style.scss">
   </head>
   <body>
     <div id='app'></div>
-    <div id='twitter'></div>
   </body>
 </html>
